[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "=0.2.82" }
getrandom = { version = "0.2", features = ["js"] }
palette = "0.6"
console_error_panic_hook = "0.1"

[dependencies.kmeans_colors]
version = "0.5"
default-features = false
features = ["palette_color"]

[profile.release]
lto = true
codegen-units = 1
